@@ -48,92 +48,92 @@ public class Config {
     };
     public static ForgeConfigSpec.ConfigValue<List<? extends String>> unsidedBlocks;
 
-    private static final ForgeConfigSpec.Builder COMMON_BUILDER = new ForgeConfigSpec.Builder();
+    private static final ForgeConfigSpec.Builder SERVER_BUILDER = new ForgeConfigSpec.Builder();
     private static final ForgeConfigSpec.Builder CLIENT_BUILDER = new ForgeConfigSpec.Builder();
 
     static {
-        COMMON_BUILDER.comment("General settings").push(CATEGORY_GENERAL);
+        SERVER_BUILDER.comment("General settings").push(CATEGORY_GENERAL);
         CLIENT_BUILDER.comment("General settings").push(CATEGORY_GENERAL);
 
 
-        unsidedBlocks = COMMON_BUILDER
+        unsidedBlocks = SERVER_BUILDER
                 .comment("This is a list of blocks that XNet considers to be 'unsided' meaning that it doesn't matter from what side you access things. This is currently only used to help with pasting channels")
                 .defineList("unsidedBlocks", Lists.newArrayList(unsidedBlocksAr), s -> s instanceof String);
 
-        controllerMaxRF = COMMON_BUILDER
+        controllerMaxRF = SERVER_BUILDER
                 .comment("Maximum RF the controller can store")
                 .defineInRange("controllerMaxRF", 100000, 1, 1000000000);
-        controllerRfPerTick = COMMON_BUILDER
+        controllerRfPerTick = SERVER_BUILDER
                 .comment("Maximum RF the controller can receive per tick")
                 .defineInRange("controllerRfPerTick", 1000, 1, 1000000000);
-        wirelessRouterMaxRF = COMMON_BUILDER
+        wirelessRouterMaxRF = SERVER_BUILDER
                 .comment("Maximum RF the wireless router can store")
                 .defineInRange("wirelessRouterMaxRF", 100000, 1, 1000000000);
-        wirelessRouterRfPerTick = COMMON_BUILDER
+        wirelessRouterRfPerTick = SERVER_BUILDER
                 .comment("Maximum RF the wireless router can receive per tick")
                 .defineInRange("wirelessRouterRfPerTick", 5000, 1, 1000000000);
 
-        wirelessRouterRfPerChannel[TileEntityWirelessRouter.TIER_1] = COMMON_BUILDER
+        wirelessRouterRfPerChannel[TileEntityWirelessRouter.TIER_1] = SERVER_BUILDER
                 .comment("Maximum RF per tick the wireless router (tier 1) needs to publish a channel")
                 .defineInRange("wireless1RfPerChannel", 20, 0, 1000000000);
-        wirelessRouterRfPerChannel[TileEntityWirelessRouter.TIER_2] = COMMON_BUILDER
+        wirelessRouterRfPerChannel[TileEntityWirelessRouter.TIER_2] = SERVER_BUILDER
                 .comment("Maximum RF per tick the wireless router (tier 2) needs to publish a channel")
                 .defineInRange("wireless2RfPerChannel", 50, 0, 1000000000);
-        wirelessRouterRfPerChannel[TileEntityWirelessRouter.TIER_INF] = COMMON_BUILDER
+        wirelessRouterRfPerChannel[TileEntityWirelessRouter.TIER_INF] = SERVER_BUILDER
                 .comment("Maximum RF per tick the wireless router (infinite tier) needs to publish a channel")
                 .defineInRange("wirelessInfRfPerChannel", 200, 0, 1000000000);
 
-        maxRfConnector = COMMON_BUILDER
+        maxRfConnector = SERVER_BUILDER
                 .comment("Maximum RF the normal connector can store")
                 .defineInRange("maxRfConnector", 50000, 1, 1000000000);
-        maxRfAdvancedConnector = COMMON_BUILDER
+        maxRfAdvancedConnector = SERVER_BUILDER
                 .comment("Maximum RF the advanced connector can store")
                 .defineInRange("maxRfAdvancedConnector", 500000, 1, 1000000000);
-        maxRfRateNormal = COMMON_BUILDER
+        maxRfRateNormal = SERVER_BUILDER
                 .comment("Maximum RF/rate that a normal connector can input or output")
                 .defineInRange("maxRfRateNormal", 10000, 1, 1000000000);
-        maxRfRateAdvanced = COMMON_BUILDER
+        maxRfRateAdvanced = SERVER_BUILDER
                 .comment("Maximum RF/rate that an advanced connector can input or output")
                 .defineInRange("maxRfRateAdvanced", 100000, 1, 1000000000);
-        maxFluidRateNormal = COMMON_BUILDER
+        maxFluidRateNormal = SERVER_BUILDER
                 .comment("Maximum fluid per operation that a normal connector can input or output")
                 .defineInRange("maxFluidRateNormal", 1000, 1, 1000000000);
-        maxFluidRateAdvanced = COMMON_BUILDER
+        maxFluidRateAdvanced = SERVER_BUILDER
                 .comment("Maximum fluid per operation that an advanced connector can input or output")
                 .defineInRange("maxFluidRateAdvanced", 5000, 1, 1000000000);
 
-        maxPublishedChannels = COMMON_BUILDER
+        maxPublishedChannels = SERVER_BUILDER
                 .comment("Maximum number of published channels that a routing channel can support")
                 .defineInRange("maxPublishedChannels", 32, 1, 1000000000);
 
-        controllerRFT = COMMON_BUILDER
+        controllerRFT = SERVER_BUILDER
                 .comment("Power usage for the controller regardless of what it is doing")
                 .defineInRange("controllerRFPerTick", 0, 0, 1000000000);
-        controllerChannelRFT = COMMON_BUILDER
+        controllerChannelRFT = SERVER_BUILDER
                 .comment("Power usage for the controller per active channel")
                 .defineInRange("controllerChannelRFT", 1, 0, 1000000000);
-        controllerOperationRFT = COMMON_BUILDER
+        controllerOperationRFT = SERVER_BUILDER
                 .comment("Power usage for the controller per operation performed by one of the channels")
                 .defineInRange("controllerOperationRFT", 2, 0, 1000000000);
         showNonFacadedCablesWhileSneaking = CLIENT_BUILDER
                 .comment("If true then cables are also shown when sneaking even if they are not in a facade")
                 .define("showNonFacadedCablesWhileSneaking", true);
 
-        antennaTier1Range = COMMON_BUILDER
+        antennaTier1Range = SERVER_BUILDER
                 .comment("Range for a tier 1 antenna")
                 .defineInRange("antennaTier1Range", 100, 0, 1000000000);
-        antennaTier2Range = COMMON_BUILDER
+        antennaTier2Range = SERVER_BUILDER
                 .comment("Range for a tier 2 antenna")
                 .defineInRange("antennaTier2Range", 500, 0, 1000000000);
 
-        COMMON_BUILDER.pop();
+        SERVER_BUILDER.pop();
         CLIENT_BUILDER.pop();
 
-        COMMON_CONFIG = COMMON_BUILDER.build();
+        SERVER_CONFIG = SERVER_BUILDER.build();
         CLIENT_CONFIG = CLIENT_BUILDER.build();
     }
 
-    public static ForgeConfigSpec COMMON_CONFIG;
+    public static ForgeConfigSpec SERVER_CONFIG;
     public static ForgeConfigSpec CLIENT_CONFIG;
 
     public static void loadConfig(ForgeConfigSpec spec, Path path) {
